--- a/urself/Base.lproj/Main.storyboard
+++ b/urself/Base.lproj/Main.storyboard
@@ -217,10 +217,10 @@
             </objects>
             <point key="canvasLocation" x="-484" y="-181"/>
         </scene>
-        <!--View Controller-->
+        <!--Registration View Controller-->
         <scene sceneID="JXR-kL-1iE">
             <objects>
-                <viewController id="Ywi-2r-Qhd" sceneMemberID="viewController">
+                <viewController id="Ywi-2r-Qhd" customClass="RegistrationViewController" customModule="urself" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Fun-xc-LMD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1447,17 +1447,9 @@
                         <color key="backgroundColor" red="0.85683221269999998" green="0.95159995720000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <gestureRecognizers/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="lCV-Vq-qk7" appends="YES" id="q6M-AX-M6O"/>
-                        </connections>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="lCV-Vq-qk7">
-                    <connections>
-                        <action selector="login:" destination="BYZ-38-t0r" id="CLo-Py-zIq"/>
-                    </connections>
-                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-1177" y="-858"/>
         </scene>
@@ -2082,7 +2074,7 @@
         <segue reference="p1M-bB-bEF"/>
         <segue reference="1aR-uY-krE"/>
         <segue reference="Ajy-jL-cXu"/>
-        <segue reference="ld0-qm-uXF"/>
+        <segue reference="gdY-ah-LD0"/>
         <segue reference="33G-zh-8fB"/>
     </inferredMetricsTieBreakers>
 </document>
