--- a/urself/Base.lproj/Main.storyboard
+++ b/urself/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="gray wood" translatesAutoresizingMaskIntoConstraints="NO" id="4zW-GX-XfS">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="light meadow" translatesAutoresizingMaskIntoConstraints="NO" id="4zW-GX-XfS">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -499,7 +499,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="poly-1" translatesAutoresizingMaskIntoConstraints="NO" id="1dT-Tj-Ztn">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="light meadow" translatesAutoresizingMaskIntoConstraints="NO" id="uiN-Go-CDm">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="rosy" translatesAutoresizingMaskIntoConstraints="NO" id="1dT-Tj-Ztn">
                                 <rect key="frame" x="20" y="116" width="157" height="102"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -595,9 +599,11 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UYY-rs-M0z">
-                                <rect key="frame" x="29" y="116" width="138" height="108"/>
+                                <rect key="frame" x="20" y="116" width="157" height="102"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="tips and tricks"/>
+                                <state key="normal" title="tips and tricks">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <segue destination="7xi-Pp-iA0" kind="show" id="FER-ai-Mzw"/>
                                 </connections>
@@ -609,7 +615,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E7u-Dw-Loy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1693" y="-2000"/>
+            <point key="canvasLocation" x="1692.753623188406" y="-2000.2232142857142"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="dpf-vG-hbX">
@@ -696,6 +702,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="light meadow" translatesAutoresizingMaskIntoConstraints="NO" id="mbu-4P-YgD">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="poly-1" translatesAutoresizingMaskIntoConstraints="NO" id="VBg-sG-ykm">
                                 <rect key="frame" x="20" y="130" width="157" height="102"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -829,7 +839,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YEC-zu-Ozf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2386" y="-2000"/>
+            <point key="canvasLocation" x="2385.507246376812" y="-2000.2232142857142"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="IOu-UO-9Rv">
@@ -2221,10 +2231,9 @@
         <image name="underwater" width="1733" height="1300"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="fEN-co-s4I"/>
-        <segue reference="2hr-ot-cPK"/>
-        <segue reference="p1M-bB-bEF"/>
-        <segue reference="Ajy-jL-cXu"/>
+        <segue reference="YRD-al-MAL"/>
+        <segue reference="ar1-bh-gZp"/>
+        <segue reference="DOz-x9-VBc"/>
         <segue reference="ld0-qm-uXF"/>
         <segue reference="ywO-RN-kWl"/>
     </inferredMetricsTieBreakers>
